Edits to "looking ahead" section

--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -108,9 +108,9 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
-- Rana Faroohar on the risks of a crypto crisis. ([Financial Times](https://news.google.com/read/CBMicEFVX3lxTE8ta25kNk5mSDlsT2lGQWFleVloUFZSS2lYa0JkTVhlV0RTbDdhOVpmSGR1eVZrbzA5TVNhRXlpVE5LUTdEcFJxeEk4bW9vVjN6eDdWOVo5MERHb05tMGRSVjR3clk5TktBSGpKVFVvTmU?hl=en-US&gl=US&ceid=US%3Aen))
+- **In her latest column,** Rana Foroohar of the Financial Times lays out [a worst-case scenario](https://news.google.com/read/CBMicEFVX3lxTE8ta25kNk5mSDlsT2lGQWFleVloUFZSS2lYa0JkTVhlV0RTbDdhOVpmSGR1eVZrbzA5TVNhRXlpVE5LUTdEcFJxeEk4bW9vVjN6eDdWOVo5MERHb05tMGRSVjR3clk5TktBSGpKVFVvTmU?hl=en-US&gl=US&ceid=US%3Aen) in which stablecoin-fueled crypto speculation could lead to another 2008-style financial crisis. 
 
-- Crypto games are shutting down. ([Decrypt](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in))
+- **Decrypt's Ryan S. Gladwin** covered web3 gaming startups' [recent woes](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in), which have led to the shutdowns of several high-profile games this year. Among the big culprits: Heavy, perhaps unrealistic pressure to boost token prices rapidly after launch. Yikes.
 
 - **The media industry is experimenting with AI.** Big publications making notebooks available on NotebookLM ([TechCrunch](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic)) | 404 Media writer says media industry's embrace of AI won't work: ([404 Media](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter)) | But bogus AI-generated news sites are proliferating ([Press Gazette](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/))  
 
