Writing through bulleted summary items

--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -1,7 +1,7 @@
 # tktk
 ## tktk
 
-![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d)
+![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo illustration by Igor Omilaev via Unsplash*
 
 <hr>
@@ -108,17 +108,19 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
-- **In her latest column,** Rana Foroohar of the Financial Times lays out [a worst-case scenario](https://news.google.com/read/CBMicEFVX3lxTE8ta25kNk5mSDlsT2lGQWFleVloUFZSS2lYa0JkTVhlV0RTbDdhOVpmSGR1eVZrbzA5TVNhRXlpVE5LUTdEcFJxeEk4bW9vVjN6eDdWOVo5MERHb05tMGRSVjR3clk5TktBSGpKVFVvTmU?hl=en-US&gl=US&ceid=US%3Aen) in which stablecoin-fueled crypto speculation could lead to another 2008-style financial crisis. 
+- **In her latest column,** Rana Foroohar of the Financial Times lays out [a worst-case scenario](https://news.google.com/read/CBMicEFVX3lxTE8ta25kNk5mSDlsT2lGQWFleVloUFZSS2lYa0JkTVhlV0RTbDdhOVpmSGR1eVZrbzA5TVNhRXlpVE5LUTdEcFJxeEk4bW9vVjN6eDdWOVo5MERHb05tMGRSVjR3clk5TktBSGpKVFVvTmU?hl=en-US&gl=US&ceid=US%3Aen) in which stablecoin-fueled crypto speculation could lead to another 2008-style financial crisis. Hmmm...
 
-- **Decrypt's Ryan S. Gladwin** covered web3 gaming startups' [recent woes](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in), which have led to the shutdowns of several high-profile games this year. Among the big culprits: Heavy, perhaps unrealistic pressure to boost token prices rapidly after launch. Yikes.
+- **Decrypt's Ryan S. Gladwin** covered web3 gaming startups' [recent woes](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in), which have led to the shutdowns of several high-profile games this year. Among the big culprits: Heavy, perhaps unrealistic pressure to boost token prices rapidly after launch.
 
 - **The media industry is experimenting with AI.** Big publications making notebooks available on NotebookLM ([TechCrunch](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic)) | 404 Media writer says media industry's embrace of AI won't work: ([404 Media](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter)) | But bogus AI-generated news sites are proliferating ([Press Gazette](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/))  
 
+- **The media industry is experimenting with AI -- but so are propagandists.** Google's NotebookLM is [adding featured notebooks](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic) from the Atlantic, the Economist, and other big-name organizations to demostrate how the app might be used to learn about an array of topics... On a more worrisome note, French journalist Jean-Marc Manach says AI has been used to generate more than [4,000 bogus news websites](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/) to game the algorithms for Google search and Google Discover... And 404 Media's Jason Koebler says AI has been contributing to a ["traffic apocalypse"](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter) for news sites lately. 
+
 ### Odds & Ends
 
-- Amateur stargazers have been capturing some amazing photos. ([Space.com](https://www.space.com/stargazing/amateur-astrophotographer-captures-trio-of-breathtaking-nebulas-from-the-central-australian-desert-photos)) 
+- **An amateur stargazer in Australia** has captured three breathtaking new images of distant nebula clouds light years away from earth. ([Space.com](https://www.space.com/stargazing/amateur-astrophotographer-captures-trio-of-breathtaking-nebulas-from-the-central-australian-desert-photos)) 
 
-- **Chuck E. Cheese got pinched.** Arrest in Tallahassee ([]()) 
+- **Chuck E. Cheese got pinched.** Police in Tallahassee, Florida, arrested an employee, who was in costume at the time as mascot of the beloved children's pizzeria chain, on felony charges of making fraudulent charges on customers' credit cards. ([Tallahassee Democrat](https://www.tallahassee.com/story/news/local/2025/07/24/chuck-e-cheese-arrest-by-tallahassee-police-photos-video/85355422007/)) 
  
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
