--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -46,11 +46,11 @@ https://dribbble.com/roobinium)
 
 - **Some whales have been fading bitcoin's record run.** Galaxy sells heap o' BTC for a whale client. ([The Block](https://www.theblock.co/post/364332/galaxy-sells-more-than-80000-btc-for-a-satoshi-era-investor))([The Block](https://www.theblock.co/post/364271/whale-sells-billions-bitcoin-galaxy)) | Tesla selling. ([CNBC](https://www.cnbc.com/2025/07/24/tesla-bitcoin-crypto-sale.html)) | ARK has been selling crypto-related shares like Robinhood and Coinbase. ([Yahoo Finance](https://finance.yahoo.com/news/cathie-wood-sells-crypto-stocks-133854499.html?guccounter=1&guce_referrer=aHR0cHM6Ly9uZXdzLmdvb2dsZS5jb20v&guce_referrer_sig=AQAAAIvOdOVjbp5d36tgkvs3KGo7dDf3vfx6Tl3cAB-EDtpr8j-LgmMvCWXen1TMr7a1OeyB8uHAY26OOwMoVavfa2G1_JRIx8-rIVXuVkMnH-2Hn2EMPZlx-Ugonm3d6zRdlsnmuM0VTmj8ggrvRFnhAvHIDHq19ahvst_w1ctN9ekT)) 
 
-- Reuters: Tokenization of RWA is gaining ground. https://www.fastcompany.com/91373072/tokenization-crypto-explainer | Christie's is opening a crypto real estate division: https://news.google.com/read/CBMihgFBVV95cUxNVl9Ia2J4bjZmSmJIM25pNVVxVXFJcGxiWUloOHA0U0lOckRoNm1sdjdPUWhMZTlPYW5tYjFXUEZZcVVnQXFJWDU1bEJxSXB2TlU2aDhjRHRZbFRPb2V0LWlHbV9QVzNZbWFOd2J5SGxkNE02SDRFcGxZdFhYSDVfd3ZQZWE3UQ?hl=en-US&gl=US&ceid=US%3Aen
+- **Christie's,** one of America's largest luxury real-estate brokerages, is launching a new unit to help clients purchase properties with digital currency. ([New York Times](https://news.google.com/read/CBMihgFBVV95cUxNVl9Ia2J4bjZmSmJIM25pNVVxVXFJcGxiWUloOHA0U0lOckRoNm1sdjdPUWhMZTlPYW5tYjFXUEZZcVVnQXFJWDU1bEJxSXB2TlU2aDhjRHRZbFRPb2V0LWlHbV9QVzNZbWFOd2J5SGxkNE02SDRFcGxZdFhYSDVfd3ZQZWE3UQ?hl=en-US&gl=US&ceid=US%3Aen)) 
 
-- Wyoming stablecoin bill ([Decrypt](https://decrypt.co/331948/wyoming-stablecoin-billed-yield-bearing-alternative-cbdc-control))
+- **The state of Wyoming is weighing** a proposal to issue its own stablecoin. The token may even offer a yield, exploiting what some state lawmakers say is a loophole in the recently passed federal Genius Act. ([Decrypt](https://decrypt.co/331948/wyoming-stablecoin-billed-yield-bearing-alternative-cbdc-control))
 
-- **More crypto scams:** BTC ATM scam to catch other scammers ([Decrypt](https://decrypt.co/331845/fake-bitcoin-atm-scheme-wasted-4000-hours-scammers-time)) | The widow of country music legend George Jones was victimized. ([WKRN](https://www.wkrn.com/news/local-news/george-jones-widow-crypto-theft/)) | AI crypto scams rising, expert says. ([New York Post](https://nypost.com/2025/07/26/tech/ai-fueled-crypto-scams-surging-in-nyc-and-beyond-expert-warns/)) | NY suspects released on bail. ([CNN](https://www.cnn.com/2025/07/24/us/suspects-new-york-crypto-kidnapping-bail-hnk))
+- **Scam updates:** TRM Labs‘ Ari Redbord says the use of AI-generated voices, deepfake videos, and phony credentials to swindle crypto investors out of their tokens [increased more than fivefold](https://nypost.com/2025/07/26/tech/ai-fueled-crypto-scams-surging-in-nyc-and-beyond-expert-warns/) in the 12-month period through April... A New York judge granted two men accused of torturing and holding a crypto investor hostage in May bail of [$1 million each](https://www.cnn.com/2025/07/24/us/suspects-new-york-crypto-kidnapping-bail-hnk) pending trial... The Nashville television station WKRN [reports](https://www.wkrn.com/news/local-news/george-jones-widow-crypto-theft/) that a local man has been charged with stealing $10 million in cash and crypto from the widow of country music legend George Jones... YouTube and Twitch streamer Kitboga has created a bitcoin ATM scam to [ensnare other scammers](https://decrypt.co/331845/fake-bitcoin-atm-scheme-wasted-4000-hours-scammers-time) who might target consumers through such kiosks. Kitboga says the ruse has so far wasted more than 4,000 hours of bad guys' time in an endless loop trying to redeem bogus credentials for bitcoin.
 
 ### Market Snapshot
 
@@ -112,15 +112,13 @@ https://dribbble.com/roobinium)
 
 - **Decrypt's Ryan S. Gladwin** covered web3 gaming startups' [recent woes](https://decrypt.co/329820/why-crypto-games-shutting-down-experts-weigh-in), which have led to the shutdowns of several high-profile games this year. Among the big culprits: Heavy, perhaps unrealistic pressure to boost token prices rapidly after launch.
 
-- **The media industry is experimenting with AI.** Big publications making notebooks available on NotebookLM ([TechCrunch](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic)) | 404 Media writer says media industry's embrace of AI won't work: ([404 Media](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter)) | But bogus AI-generated news sites are proliferating ([Press Gazette](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/))  
-
-- **The media industry is experimenting with AI -- but so are propagandists.** Google's NotebookLM is [adding featured notebooks](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic) from the Atlantic, the Economist, and other big-name organizations to demostrate how the app might be used to learn about an array of topics... On a more worrisome note, French journalist Jean-Marc Manach says AI has been used to generate more than [4,000 bogus news websites](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/) to game the algorithms for Google search and Google Discover... And 404 Media's Jason Koebler says AI has been contributing to a ["traffic apocalypse"](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter) for news sites lately. 
+- **The media industry is experimenting with AI -- but so are propagandists.** Google's NotebookLM is [adding featured notebooks](https://techcrunch.com/2025/07/14/notebooklm-adds-featured-notebooks-from-the-economist-the-atlantic-and-others/?utm_campaign=social&utm_source=bluesky&utm_medium=organic) from the Atlantic, the Economist, and other big-name organizations to demostrate how the app might be used to learn about an array of topics... On a more worrisome note, French journalist Jean-Marc Manach says AI has been used to generate more than [4,000 bogus news websites](https://pressgazette.co.uk/news/french-journalist-who-uncovered-4000-fake-ai-news-websites-warns-uk-could-be-next/) to game the algorithms for Google search and Google Discover. And 404 Media's Jason Koebler says AI has been contributing to a ["traffic apocalypse"](https://www.404media.co/the-medias-pivot-to-ai-is-not-real-and-not-going-to-work/?ref=daily-stories-newsletter) for news sites lately. 
 
 ### Odds & Ends
 
 - **An amateur stargazer in Australia** has captured three breathtaking new images of distant nebula clouds light years away from earth. ([Space.com](https://www.space.com/stargazing/amateur-astrophotographer-captures-trio-of-breathtaking-nebulas-from-the-central-australian-desert-photos)) 
 
-- **Chuck E. Cheese got pinched.** Police in Tallahassee, Florida, arrested an employee, who was in costume at the time as mascot of the beloved children's pizzeria chain, on felony charges of making fraudulent charges on customers' credit cards. ([Tallahassee Democrat](https://www.tallahassee.com/story/news/local/2025/07/24/chuck-e-cheese-arrest-by-tallahassee-police-photos-video/85355422007/)) 
+- **Chuck E. Cheese got pinched.** Police in Tallahassee, Florida, arrested an employee in costume as mascot of the beloved children's pizzeria chain on felony charges of making fraudulent charges on customers' credit cards. ([Tallahassee Democrat](https://www.tallahassee.com/story/news/local/2025/07/24/chuck-e-cheese-arrest-by-tallahassee-police-photos-video/85355422007/)) 
  
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
