Fleshing out lead item, etc.

--- a/2025/2025-07-27-wir.md
+++ b/2025/2025-07-27-wir.md
@@ -1,5 +1,5 @@
-# tktk
-## tktk
+# The China vs America competition in AI is heating up
+## Shanghai conference offers new details -- and raises new questions at the same time.
 
 ![Sistine Chapel-inspired image of a robot hand and a human hand touching](https://images.unsplash.com/photo-1694903110330-cc64b7e1d21d?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo illustration by Igor Omilaev via Unsplash*
@@ -14,18 +14,17 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+**The World Artificial Intelligence Conference** in Shanghai has been generating some headlines the last few days that are definitely worth highlighting:
 
-<!-- Round up several links about China's AI policy + startups...
- -->
+- **In remarks to the gathering,** Chinese premier Li Qiang proposed establishing an organization to foster global cooperation on AI, calling on countries to coordinate on the development and security. ([The Guardian](https://www.theguardian.com/technology/2025/jul/26/china-calls-for-global-ai-cooperation-days-after-trump-administration-unveils-low-regulation-strategy))
 
-- CCP calls for global AI cooperation. ([The Guardian](https://www.theguardian.com/technology/2025/jul/26/china-calls-for-global-ai-cooperation-days-after-trump-administration-unveils-low-regulation-strategy)) 
+- **Li's comments echoed** one of the key points in a new action plan on AI published by the Chinese government ahead of the conference. ([CNBC](https://www.cnbc.com/2025/07/26/china-ai-action-plan.html)) 
 
-- New Huawei AI system. ([Reuters](https://www.reuters.com/world/china/huawei-shows-off-ai-computing-system-rival-nvidias-top-product-2025-07-26/)) 
+- **Huawei unveiled a new chipset** dubbed the CloudMatrix 384 designed to rival the offerings of AI market leader Nvidia. ([Reuters](https://www.reuters.com/world/china/huawei-shows-off-ai-computing-system-rival-nvidias-top-product-2025-07-26/)) 
 
-- New Chinese government action plan. ([CNBC](https://www.cnbc.com/2025/07/26/china-ai-action-plan.html)) 
+- **Prior to the Shanghai conference,** the White House published its own plan on AI, emphasizing laissez-faire regulation of the new technology in the U.S. ([CNET](https://www.cnet.com/tech/services-and-software/trumps-ai-action-plan-is-here-5-key-takeaways/))
 
-- White House announced one as well. ([CNET](https://www.cnet.com/tech/services-and-software/trumps-ai-action-plan-is-here-5-key-takeaways/))
+On to the 
 
 <!--
 
@@ -40,11 +39,11 @@ https://dribbble.com/roobinium)
 
 ### Five Things: July 20-26, 2025
 
-*The week's top headlines about emerging technologies and trends reshaping the web:*
+*On to some notable headlines elsewhere regarding the technologies and trends reshaping the web:*
 
-- https://decrypt.co/331906/ethereum-etfs-massively-outpace-bitcoin-funds
+- **Exchange-traded funds holding ether** have been on a roll, attracting far more investor cash last week than bitcoin funds. According to data from Farside Investorss, nine ETFs tracking ether garnered more than $1.8 billion in net inflows through Friday, continuing a 16-day positive streak. By contrast bitcoin ETFs added just $70 million in assets, including three out of the stock market's five trading days showing net outflows for the funds. Yikes. ([Decrypt](https://decrypt.co/331906/ethereum-etfs-massively-outpace-bitcoin-funds))
 
-- **Some whales have been fading bitcoin's record run.** Galaxy sells heap o' BTC for a whale client. ([The Block](https://www.theblock.co/post/364332/galaxy-sells-more-than-80000-btc-for-a-satoshi-era-investor))([The Block](https://www.theblock.co/post/364271/whale-sells-billions-bitcoin-galaxy)) | Tesla selling. ([CNBC](https://www.cnbc.com/2025/07/24/tesla-bitcoin-crypto-sale.html)) | ARK has been selling crypto-related shares like Robinhood and Coinbase. ([Yahoo Finance](https://finance.yahoo.com/news/cathie-wood-sells-crypto-stocks-133854499.html?guccounter=1&guce_referrer=aHR0cHM6Ly9uZXdzLmdvb2dsZS5jb20v&guce_referrer_sig=AQAAAIvOdOVjbp5d36tgkvs3KGo7dDf3vfx6Tl3cAB-EDtpr8j-LgmMvCWXen1TMr7a1OeyB8uHAY26OOwMoVavfa2G1_JRIx8-rIVXuVkMnH-2Hn2EMPZlx-Ugonm3d6zRdlsnmuM0VTmj8ggrvRFnhAvHIDHq19ahvst_w1ctN9ekT)) 
+- **Crypto's whales are on the move.** Galaxy Digital said it recently sold [$9 billion worth of bitcoin](https://www.theblock.co/post/364332/galaxy-sells-more-than-80000-btc-for-a-satoshi-era-investor) for an unnamed long-term tokenholder The transaction is believed to be the largest ever sale of bitcoinby a single investor... Cathie Wood’s Ark Invest has recently [trimmed its holdings](https://finance.yahoo.com/news/cathie-wood-sells-crypto-stocks-133854499.html?guccounter=1&guce_referrer=aHR0cHM6Ly9uZXdzLmdvb2dsZS5jb20v&guce_referrer_sig=AQAAAIvOdOVjbp5d36tgkvs3KGo7dDf3vfx6Tl3cAB-EDtpr8j-LgmMvCWXen1TMr7a1OeyB8uHAY26OOwMoVavfa2G1_JRIx8-rIVXuVkMnH-2Hn2EMPZlx-Ugonm3d6zRdlsnmuM0VTmj8ggrvRFnhAvHIDHq19ahvst_w1ctN9ekT) in several major crypto-related stocks like Coinbase and Robinhood while rotating money into an Ether-focused treasury firm backed by Peter Thiel. Hmmm... [CNBC reports](https://www.cnbc.com/2025/07/24/tesla-bitcoin-crypto-sale.html) that Tesla's buying and selling of bitcoin in recent years has often been terribly timed, effectively causing the automaker to missout on billions of dollars in market gains. 
 
 - **Christie's,** one of America's largest luxury real-estate brokerages, is launching a new unit to help clients purchase properties with digital currency. ([New York Times](https://news.google.com/read/CBMihgFBVV95cUxNVl9Ia2J4bjZmSmJIM25pNVVxVXFJcGxiWUloOHA0U0lOckRoNm1sdjdPUWhMZTlPYW5tYjFXUEZZcVVnQXFJWDU1bEJxSXB2TlU2aDhjRHRZbFRPb2V0LWlHbV9QVzNZbWFOd2J5SGxkNE02SDRFcGxZdFhYSDVfd3ZQZWE3UQ?hl=en-US&gl=US&ceid=US%3Aen)) 
 
