Preliminary market closes + writethrough

--- a/2025/2025-08-03-wir.md
+++ b/2025/2025-08-03-wir.md
@@ -18,7 +18,15 @@
 
 <!-- Riff on Ethereum's 10th anniversary. -->
 
-Ethereum has reached a milestone, celebrating its 10-year anniversary with a remarkable 1.2 million percent increase in value since its initial coin offering in 2014. Despite facing numerous challenges, including the DAO hack, regulatory hurdles, and scalability issues, Ethereum has consistently demonstrated its resilience and adaptability, solidifying its position as a foundational platform for the next generation of financial systems. ([The Block](https://www.theblock.co/post/364947/10-years-on-ethereum-has-rebuilt-itself-time-and-again-without-compromising-on-its-values-community-members-say)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- Ethereum has reached a milestone, celebrating its 10-year anniversary with a remarkable 1.2 million percent increase in value since its initial coin offering in 2014. Despite facing numerous challenges, including the DAO hack, regulatory hurdles, and scalability issues, Ethereum has consistently demonstrated its resilience and adaptability, solidifying its position as a foundational platform for the next generation of financial systems. ([The Block](https://www.theblock.co/post/364947/10-years-on-ethereum-has-rebuilt-itself-time-and-again-without-compromising-on-its-values-community-members-say)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- Ethereum treasury companies have rapidly accumulated over 1% of all circulating ETH in just two months, with some analysts predicting a tenfold growth could push prices past $4,000. This rapid accumulation is attributed to institutions' desire to capitalize on regulatory inefficiencies and potential staking rewards, although Bernstein analysts note that these companies also face unique risks such as liquidity and smart contract risks. ([Decrypt](https://decrypt.co/332281/ethereum-treausry-10-percent-all-eth-standard-chartered)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- SharpLink Gaming, a Minnesota-based Ethereum treasury firm, has significantly increased its Ethereum holdings in July, acquiring $780 million worth of the cryptocurrency and solidifying its position as one of the largest holders of Ethereum. This strategic move is part of the company's plan to boost shareholder value by acquiring more Ethereum per fully diluted share. ([Decrypt](https://decrypt.co/332334/sharplink-gaming-drops-780-million-ethereum-july)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- Polygon, a leading Ethereum Layer 2 platform, suffered a one-hour outage due to a consensus bug that occurred when a validator left the network. The bug was promptly patched, and the network has since returned to normal, although users may still experience disruptions accessing various apps due to ongoing RPC issues. ([The Block](https://www.theblock.co/post/364913/polygon-suffers-hour-long-outage-weeks-after-complex-hard-fork)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+
 
 <!--
 
@@ -31,30 +39,22 @@ https://dribbble.com/roobinium)
 
 -->
 
+
+
+
 ### Five Things: July 27 to Aug. 2, 2025
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Bloomberg Crypto: https://www.youtube.com/results?search_query=bloomberg+crypto
+- Markets: New btc record Friday, etc. Big week for Big Tech earnings: META APPLE MSFT, AMAZON earnings.
 
-- **Some CEOs have begun bragging publicly** about AI-driven job cuts. ([Wall Street Journal](https://www.wsj.com/lifestyle/careers/layoff-business-strategy-reduce-staff-11796d66?st=2QS96N&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Ethereum treasury companies have rapidly accumulated over 1% of all circulating ETH in just two months, with some analysts predicting a tenfold growth could push prices past $4,000. This rapid accumulation is attributed to institutions' desire to capitalize on regulatory inefficiencies and potential staking rewards, although Bernstein analysts note that these companies also face unique risks such as liquidity and smart contract risks. ([Decrypt](https://decrypt.co/332281/ethereum-treausry-10-percent-all-eth-standard-chartered)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Bakkt is shifting its focus to crypto infrastructure, selling its loyalty division to Project Labrador Holdco for $11 million, and raising $75 million to support its pivot towards digital asset custody, trading, and stablecoin infrastructure. This move is part of the company's broader strategy to double down on core crypto services, including custody and stablecoin payments, and to allocate a portion of its treasury to Bitcoin. ([Decrypt](https://decrypt.co/332368/bakkt-sheds-loyalty-division-as-it-doubles-down-on-crypto)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- SharpLink Gaming, a Minnesota-based Ethereum treasury firm, has significantly increased its Ethereum holdings in July, acquiring $780 million worth of the cryptocurrency and solidifying its position as one of the largest holders of Ethereum. This strategic move is part of the company's plan to boost shareholder value by acquiring more Ethereum per fully diluted share. ([Decrypt](https://decrypt.co/332334/sharplink-gaming-drops-780-million-ethereum-july)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- FIGMA IPO <!-- Link TK -->
 
 - Robinhood's Q2 crypto trading volume jumped 32% year-over-year to $28 billion, driven by the company's push into tokenization and its acquisition of crypto exchange Bitstamp. The company also reported strong financial results, with diluted earnings of $0.42 per share and quarterly revenue of $989 million, exceeding market estimates. ([The Block](https://www.theblock.co/post/364887/robinhoods-q2-crypto-volume-tokenization-bitstamp-deal)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-
-- Cboe BZX and NYSE Arca have proposed new listing standards for crypto exchange-traded funds (ETFs), aiming to streamline the approval process and reduce the time it takes for these products to go public. The proposed standards would allow crypto ETFs to list and trade under a standard framework, potentially cutting down the review period from up to 240 days to just 21 days or less. ([The Block](https://www.theblock.co/post/364923/cboe-bzx-proposes-streamline-crypto-etf-approvals-to-the-sec)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- Bakkt is shifting its focus to crypto infrastructure, selling its loyalty division to Project Labrador Holdco for $11 million, and raising $75 million to support its pivot towards digital asset custody, trading, and stablecoin infrastructure. This move is part of the company's broader strategy to double down on core crypto services, including custody and stablecoin payments, and to allocate a portion of its treasury to Bitcoin. ([Decrypt](https://decrypt.co/332368/bakkt-sheds-loyalty-division-as-it-doubles-down-on-crypto)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 - Despite a $35 billion scam crackdown by US regulators, Telegram-banned marketplaces Huione Guarantee and Xinbi Guarantee have reportedly found new life on the platform Tudou Guarantee, which is affiliated with Huione Group. The illicit ecosystem has continued to operate, with some scammers even acquiring new Telegram IDs and channels to evade detection, highlighting the challenges of fully shutting down such complex and resilient networks. ([Cryptopolitan](https://www.cryptopolitan.com/telegram-banned-35b-scam-marketplaces-life/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- Polygon, a leading Ethereum Layer 2 platform, suffered a one-hour outage due to a consensus bug that occurred when a validator left the network. The bug was promptly patched, and the network has since returned to normal, although users may still experience disruptions accessing various apps due to ongoing RPC issues. ([The Block](https://www.theblock.co/post/364913/polygon-suffers-hour-long-outage-weeks-after-complex-hard-fork)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
-
-- **OpenAI updates:**& OpenAI's CEO Sam Altman has expressed concerns about the capabilities of their upcoming AI model, GPT-5, describing it as feeling "very fast" and even comparing it to the Manhattan Project. Altman's comments highlight the potential risks and power dynamics surrounding the development of advanced AI, raising questions about responsibility and governance in the industry.  ([TechRadar](https://www.techradar.com/ai-platforms-assistants/chatgpt/openais-ceo-says-hes-scared-of-gpt-5)) | OpenAI is planning to launch its next-generation GPT-5 model in early August, which will integrate the o3 reasoning capabilities and be available through ChatGPT and the OpenAI API. The launch is expected to include mini and nano versions of the model, with the main combined reasoning version available through ChatGPT and the API. ([The Verge](https://www.theverge.com/notepad-microsoft-newsletter/712950/openai-gpt-5-model-release-date-notepad)) | OpenAI has introduced a new "study mode" feature within its ChatGPT platform, designed to help students learn and work through problems step-by-step rather than relying on the chatbot for direct answers. This feature, which is available to all users, aims to improve learning and reduce the risk of students using AI tools to cheat. ([CNBC](https://www.cnbc.com/2025/07/29/openai-announces-new-study-mode-product-for-students-.html)) | OpenAI's ChatGPT Agent has successfully navigated Cloudflare's anti-bot verification process, a common security checkpoint on the web, by clicking through a two-step verification process while narrating its actions. This achievement highlights the agent's advanced browser automation capabilities and raises questions about the effectiveness of CAPTCHAs in preventing automated programs from accessing websites. ([ArsTechnica](https://arstechnica.com/information-technology/2025/07/openais-chatgpt-agent-casually-clicks-through-i-am-not-a-robot-verification-test/)) <!-- Draft news summary items by Leo/Llama 3.1 8B -->
 
 ### Market Snapshot
 
@@ -74,37 +74,37 @@ https://dribbble.com/roobinium)
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td>$</td>
-     <td><!-- BTC weekly % change --></td>
-     <td><!-- BTC YTD % change --></td>
+     <td>$113,270.78</td>
+     <td>-2.9%</td>
+     <td>+20.7%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>22,763.31</td>
+     <td>-2.2%</td>
+     <td>+8.3%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$/oz</td>
+     <td>$tk/oz</td>
      <td></td>
      <td></td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td></td>
+     <td>tk</td>
      <td></td>
      <td></td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>%</td>
-     <td></td>
-     <td></td>
+     <td>4.220%</td>
+     <td>-0.170</td>
+     <td>-0.350</td>
    </tr>
 
 </tbody>
@@ -113,17 +113,17 @@ https://dribbble.com/roobinium)
 
 ### Looking Ahead
 
-- Good article on preventing road deaths: https://www.washingtonpost.com/opinions/2025/07/28/highway-deaths-reduce-drivers-ed/
+- **OpenAI updates:**& OpenAI's CEO Sam Altman has expressed concerns about the capabilities of their upcoming AI model, GPT-5, describing it as feeling "very fast" and even comparing it to the Manhattan Project. Altman's comments highlight the potential risks and power dynamics surrounding the development of advanced AI, raising questions about responsibility and governance in the industry.  ([TechRadar](https://www.techradar.com/ai-platforms-assistants/chatgpt/openais-ceo-says-hes-scared-of-gpt-5)) | OpenAI is planning to launch its next-generation GPT-5 model in early August, which will integrate the o3 reasoning capabilities and be available through ChatGPT and the OpenAI API. The launch is expected to include mini and nano versions of the model, with the main combined reasoning version available through ChatGPT and the API. ([The Verge](https://www.theverge.com/notepad-microsoft-newsletter/712950/openai-gpt-5-model-release-date-notepad)) | OpenAI has introduced a new "study mode" feature within its ChatGPT platform, designed to help students learn and work through problems step-by-step rather than relying on the chatbot for direct answers. This feature, which is available to all users, aims to improve learning and reduce the risk of students using AI tools to cheat. ([CNBC](https://www.cnbc.com/2025/07/29/openai-announces-new-study-mode-product-for-students-.html)) | OpenAI's ChatGPT Agent has successfully navigated Cloudflare's anti-bot verification process, a common security checkpoint on the web, by clicking through a two-step verification process while narrating its actions. This achievement highlights the agent's advanced browser automation capabilities and raises questions about the effectiveness of CAPTCHAs in preventing automated programs from accessing websites. ([ArsTechnica](https://arstechnica.com/information-technology/2025/07/openais-chatgpt-agent-casually-clicks-through-i-am-not-a-robot-verification-test/)) <!-- Draft news summary items by Leo/Llama 3.1 8B -->
 
-- ([]())
+- Cboe BZX and NYSE Arca have proposed new listing standards for crypto exchange-traded funds (ETFs), aiming to streamline the approval process and reduce the time it takes for these products to go public. The proposed standards would allow crypto ETFs to list and trade under a standard framework, potentially cutting down the review period from up to 240 days to just 21 days or less. ([The Block](https://www.theblock.co/post/364923/cboe-bzx-proposes-streamline-crypto-etf-approvals-to-the-sec)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
-- ([]())
+- **Some CEOs have begun bragging publicly** about AI-driven job cuts. ([Wall Street Journal](https://www.wsj.com/lifestyle/careers/layoff-business-strategy-reduce-staff-11796d66?st=2QS96N&reflink=desktopwebshare_permalink)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
-- Tips on preventing heart disease: https://www.washingtonpost.com/wellness/2025/07/28/science-prevent-heart-disease/ ([]())
+- Good article on preventing road deaths: https://www.washingtonpost.com/opinions/2025/07/28/highway-deaths-reduce-drivers-ed/
 
-- ([]())
+- SNL's ticket lottery is now open ([]())
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
